--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ baidu_site_verification  :  codeva-AySkA5Tqi4 # get baidu_site_verification from
 # Site Author
 author:
   name             : "Zihang Zhen"
-  avatar           : "images/avatar.png"
+  avatar           : "assets/images/avatar.png"
   bio              : "Ph.D. Student"
   location         : "Wuhan, China"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=RpkFU_oAAAAJ"
   email            : "zzihang@foxmail.com"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Zihang-Zhen" # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
