--- a/_data/news.yml
+++ b/_data/news.yml
@@ -6,7 +6,7 @@ main:
     msg: I was honored with the title of <strong>Outstanding Graduate</strong> of Fujian Normal University.
 
   - date: May. 2024
-    msg: I gave a <a href="https://ccs.fjnu.edu.cn/fd/ac/c17036a392620/page.htm">speech</a> to the junior students about my experience applying for a Ph.D. student.
+    msg: I was honored to deliver a <a href="https://ccs.fjnu.edu.cn/fd/ac/c17036a392620/page.htm">speech</a> to junior students as a representative of outstanding graduates.
 
   - date: Jan. 2024
     msg: Our paper on privacy protection in federated learning has been accepted by <strong>IEEE TCE</strong>.
