--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -45,7 +45,7 @@ main:
     authors: <strong>Zihang Zhen</strong>; Xiaoding Wang; Hui Lin; Sahil Garg; Prabhat Kumar; M Shamim Hossain
     journal_short: JNCA
     journal: Journal of Network and Computer Applications <strong>(JNCA)</strong>, 2023.
-    keywords: Blockchain, State sharding, Crowdsourcing, Deep reinforcement learning
+    keywords: Blockchain, State Sharding, Crowdsourcing, Deep Reinforcement Learning
     cited: RpkFU_oAAAAJ:u5HHmVD_uO8C
     pdf: assets/file/dssbd-jnca.pdf
     doi: https://doi.org/10.1016/j.jnca.2023.103785
